# _Neuroca

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE_RULES.md  BETA_READINESS_CHECKLIST.md  BETA_RELEASE.md  CHANGELOG.md  CRITICAL_TODO_CHECKLIST.md  Dockerfile  Makefile  NEUROCA_BETA_READINESS.md  PROJECT_COMPLETION_CHECKLIST.md  README.md  SECURITY_FIX_CHECKLIST.md  build_template.ps1  build_template_fixed.ps1  build_template_v2.ps1  dashboard_fixer.py  debug_schema_creation.ps1  docker-compose.agent.yml  insert_worker.py  nca_chat_with_llm.py  neuroca_schema.sql  neuroca_temporal_analysis.db-shm  neuroca_temporal_analysis.db-wal  populate_missing_usage_analysis.py  project_health_monitor.py  pyproject.toml  real_nca_brain_demo.py  requirements.txt  run_automated_tracking_setup.py  run_local_ollama.py  simple_file_watcher.py  simple_priority_dashboard_with_tracking.py  start_file_watcher.py  sync_status_systems.py  temp_schema_debug.sql  (+5 more)
.archive/: PROJECT_COMPLETION_CHECKLIST.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
DB_backup/20250607_0538/: neuroca_temporal_analysis.db-shm  neuroca_temporal_analysis.db-wal
DB_backup/20250607_0610/: neuroca_temporal_analysis.db-shm  neuroca_temporal_analysis.db-wal
DB_backup/20250607_0728/: neuroca_temporal_analysis.db-shm  neuroca_temporal_analysis.db-wal
analysis_artifacts/summarization/: README.md
benchmarks/: llm_benchmarks.py
benchmarks/llm_bench/: __init__.py  datasets.py  latency.py  util.py
benchmarks/memory_systems_comparison/: README.md  __init__.py  __main__.py  base.py  benchmark_runner.py  demo.py  report_generator.py
config/: local-llm.example.yaml  production.yaml
config/backends/: base_config.yaml
docs/: README.md  RELEASE_NOTES.md  codacy_checklist.md  index.md  mkdocs.yml
docs/about/: changelog.md
docs/architecture/: 00_executive_summary.md  01_context_c4.mmd  02_containers_c4.mmd  03_components_api.mmd  03_components_memory_manager.mmd  04_code_map.md  05_dependency_graph.dot  06_dependency_matrix.csv  07_runtime_sequence_llm_query.mmd  07_runtime_sequence_memory_add.mmd  08_dataflow_memory_lifecycle.mmd  09_domain_model.mmd  10_quality_gates.md  11_non_functionals.md  12_operability.md  13_refactor_plan.md  14_arch_alignment.md  16_ux_touchpoints.md  17_api_surface_openapi.json  README.md  architecture-map.json  architecture_decisions.md  memory_decay_math.md  memory_manager_architecture.md  memory_system_backend_configuration.md
docs/development/: contributing.md  environment.md  local-llm-plan.md  memory_sample_packs.md  workflow.md
docs/guides/: local-llm-quickstart.md  publishing_to_pypi.md
docs/integration/: langchain.md  ollama.md
docs/operations/: deployment.md  final_signoff.md  memory_failure_recovery_runbook.md  memory_tuning_guide.md  monitoring.md  pre_dev_testing_todo.md  release.md
docs/pages/: index.md
docs/user/: getting-started.md  integration.md
logs/: .gitignore
reports/: AUTOMATED_PROJECT_TRACKING_GUIDE.md  BUG_DETECTION_SYSTEM_FINAL_STATUS.md  BUG_INVESTIGATION_AND_FIXES_REPORT.md  CLI_ENTRY_POINTS_COMPLETE_FINAL_REPORT.md  CLI_ENTRY_POINTS_FIX_PROGRESS_REPORT.md  CLI_ENTRY_POINTS_INVESTIGATION_REPORT.md  CLI_TEMPORAL_DATABASE_FIX_FINAL_REPORT.md  COMPONENT_STATUS_EFFORT_HOURS_VALIDATION_REPORT.md  COMPONENT_STATUS_VERIFICATION_FINAL_REPORT.md  COMPREHENSIVE_SYNCING_AND_DATA_QUALITY_FINAL_REPORT.md  DATABASE_INVESTIGATION_FINAL_REPORT.md  DATABASE_NORMALIZATION_FINAL_REPORT.md  DATA_INCONSISTENCY_RESOLUTION_COMPLETE_FINAL.md  DATA_INCONSISTENCY_RESOLUTION_FINAL_REPORT.md  DATA_INCONSISTENCY_RESOLUTION_ULTIMATE_FINAL.md  EFFORT_HOURS_INCONSISTENCY_RESOLUTION_COMPLETE.md  EXPERT_SYSTEM_ANALYSIS.md  FILE_WATCHER_FIX_COMPLETION_REPORT.md  INTELLIGENT_MONITORING_SYSTEM_GUIDE.md  LOGGING_SYSTEM_INTEGRATION_FINAL_REPORT.md  MANUAL_REVIEW_22_FLAGGED_COMPONENTS.md  MISSING_NOTES_FIX_REPORT.md  NEUROCA_COMPLETION_PLAN.md  NEUROCA_EXPERT_ANALYSIS.md  NEUROCA_EXPERT_SYSTEM_ANALYSIS.md  NEUROCA_PROJECT_COMPREHENSIVE_STATUS_REPORT.md  README_DATABASE_IMPROVEMENTS.md  STATUS_MISMATCH_RESOLUTION_FINAL_REPORT.md  USAGE_ANALYSIS_DATA_QUALITY_ENFORCEMENT_REPORT.md  VALIDATION_LOGIC_FIX_FINAL_REPORT.md  VERIFICATION_RESULTS_SUMMARY.md  codeviz-diagram-2025-06-06T23-25-45.drawio  codeviz-diagram-2025-06-06T23-49-22.drawio  codeviz_report_investigate_the_databases__component_in_detail__pr_2025-06-06T06-51-11.md  codeviz_report_investigate_the_databases__component_in_detail__pr_2025-06-06T06-52-16.md  codeviz_report_visualize_the_end_to_end_automated_process_where_a_2025-06-06T23-55-31.md
sandbox/: README.md  advanced_nca_llm_client.py  working_nca_client.py
scripts/: README.md  basic_memory_test.py  generate_diagrams.py  memory_schema_migration.py  setup_mkdocs.py  test_memory_with_llm.py
scripts/sql/: add_broken_component_validation.py  add_effort_hours_validation_rule.py  add_usage_analysis_data_quality_constraints.sql  check_and_fix_file_watcher.py  check_database_structure.py  comprehensive_database_restoration_and_normalization.sql  comprehensive_syncing_and_data_quality.sql  create_automated_project_tracking.py  create_bug_detection_system.py  create_neuroca_temporal_database.py  database_normalization_analysis_and_design.sql  enhanced_project_tracking_schema.py  execute_effort_hours_fix.sql  fix_cli_status_inconsistencies.sql  fix_data_inconsistencies_comprehensive.sql  fix_data_inconsistencies_corrected.sql  fix_detected_bugs.py  fix_effort_hours_inconsistency.sql  fix_effort_logic_validation_rule.py  fix_existing_null_values.py  fix_priority_dashboard_clean.py  fix_priority_dashboard_corrected.py  fix_priority_dashboard_minimal.py  fix_status_mismatch.sql  fix_temporal_database_data.py  full_normalization_with_referential_integrity.sql  phase1_create_normalized_table_structure.sql  phase2_airtight_legacy_migration.sql  phase2_data_migration.sql  phase2_data_migration_corrected.sql  phase2_fix_lookup_values.sql  (+13 more)
tests/: conftest.py  run_mutmut_pytest.py
(+514 files in other folders)
